bugfix(theme) hide scrollbar on webkit browsers

--- a/src/theme/body.scss
+++ b/src/theme/body.scss
@@ -19,3 +19,8 @@ body {
   background-color: theme-color('primary');
   color: $white;
 }
+
+::-webkit-scrollbar {
+  display: none;
+  width: 0;
+}
